# dingofs

./: .gitignore  CMakeLists.txt  README.md
cmake/: Findibverbs.cmake  Findrados.cmake
conf/: client.conf
docs/designs/cache-perf/: 07-shared-state-sharding.md  README.md
docs/superpowers/specs/: 2026-05-14-rdma-event-dispatcher-design.md
integration/lmcache/: CMakeLists.txt  Makefile  README.md
integration/lmcache/csrc/: buffer_handle.h  completion_queue.cc  module.cc  native_engine.cc  native_engine.h  rdma_memory_registry.cc  rdma_memory_registry.h
integration/lmcache/examples/: _fake_lmcache.py  client.py
integration/lmcache/src/cache_engine/: cache_engine.cpp  cache_engine.h  cache_engine_capi.cpp  cache_engine_capi.h  noop_block_accesser.h
integration/lmcache/src/connector/: dingofs_connector.cpp  dingofs_connector.h  exists_cache.h  noop_block_accesser.h  pybind.cpp
integration/lmcache/src/dingofs_connector/: __init__.py  adapter.py  client.py  config.py  connector.py  connector_client_base.py  exists_cache.py  l2_adapter.py  l2_factory.py  native_client.py  native_engine.py  remote_connector.py
integration/lmcache/tests/cache_engine/: CMakeLists.txt  test_c_api.cpp
integration/lmcache/tests/connector/: CMakeLists.txt  test_dingofs_connector.cpp
integration/lmcache/tests/dingofs_connector/: conftest.py  test_connector.py  test_l2_adapter.py  test_native_engine.py  test_performance.py
integration/lmcache/tests/io_engine/: test_c_api.cpp
integration/lmcache/tests/unit/: test_url.py
src/: CMakeLists.txt
src/cache/: CMakeLists.txt  README.md  dingo_cache.cc
src/cache/bench/: CMakeLists.txt  block_reader.cc  block_reader.h
src/cache/benchmark/: CMakeLists.txt  README.md  benchmarker.cc  benchmarker.h  factory.cc  factory.h  main.cc  option.cc  option.h  reporter.cc  reporter.cpp  run_rdma_cache_bench.sh  worker.cc  worker.h
src/cache/blockcache/: CMakeLists.txt  block_cache.cpp  block_cache.h  block_cache_impl.cc  block_cache_impl.h  block_cache_metric.h  block_cache_throttle.cpp  block_cache_uploader.cc  block_cache_uploader.cpp  block_cache_uploader.h  block_cache_uploader_common.cpp  cache_store.h  disk_cache.cc  disk_cache.cpp  disk_cache.h  disk_cache_group.cc  disk_cache_group.cpp  disk_cache_group.h  disk_cache_loader.cc  disk_cache_loader.cpp  disk_cache_manager.cc  disk_cache_manager.cpp  disk_cache_manager.h  disk_cache_metric.h  disk_cache_watcher.cpp  disk_cache_watcher.h  disk_state_health_checker.cpp  disk_state_machine_impl.cpp  io_uring.cc  io_uring.h  local_filesystem.cc  local_filesystem.h  mem_cache.h
src/cache/cachegroup/: CMakeLists.txt  async_cache.h  cache_group_node.cpp  cache_group_node.h  cache_group_node_heartbeat.cpp  cache_group_node_heartbeat.h  cache_group_node_member.cpp  cache_group_node_member.h  cache_group_node_server.cc  cache_group_node_server.cpp  cache_group_node_server.h  cache_group_node_service.cc  cache_group_node_service.cpp  node.cc  node.h  rdma_service.cc  rdma_service.h  server.cc  server.h  service.cc  service.h
src/cache/common/: CMakeLists.txt  block_key_helper.h  config.cpp  config.h  dynamic_config.cpp  dynamic_config.h  errno.cpp  errno.h  error.cc  error.h  local_filesystem.cpp  local_filesystem.h  log.cpp  mds_client.cc  phase_timer.cpp  phase_timer.h  posix.cpp  s3_client.cpp  s3_client.h  s3_client_pool.cpp  s3_client_pool.h  slab_pool.cc  slab_pool.h  state_machine.h  storage_client.cc  storage_client.h  sys_conf.cpp  sys_conf.h  use_rdma_flag.cc  use_rdma_flag.h
src/cache/infiniband/: README.md  client.cc  client.h  client_rdma_pool.cc  client_rdma_pool.h  client_session.cc  client_session.h  connection.cc  connection.h  controller.cc  controller.h  event.cc  event.h  infiniband.cc  infiniband.h  memory.cc  memory.h  messenger.cc  messenger.h  protocol.cc  protocol.h  rdma_memory.cc  rdma_memory.h  reader.cc  sender.cc  server.cc  server.h  server_session.cc  server_session.h
src/cache/local/: disk_cache.cc  io_uring.cc
src/cache/node/: cache_server.cc  node.cc  service.cc
src/cache/remote/: remote_node.h  remote_node_connection.cc
src/cache/remotecache/: CMakeLists.txt  block_fetcher.cc  block_fetcher.h  mem_cache.cc  mem_cache.h  peer.cc  peer.h  prefetch.cc  prefetch.h  rdma_peer.cc  rdma_peer.h  remote_block_cache.cc  remote_block_cache.cpp  remote_block_cache.h  remote_cache_node_impl.cc  remote_node.cpp  remote_node.h  remote_node_manager.cpp  remote_node_manager.h  request.h  rpc_client.cc  rpc_client.h  segment_fetcher.cc  segment_fetcher.h  upstream.cc  upstream.h
src/cache/storage/: CMakeLists.txt  base_filesystem.cc  local_filesystem.cc  local_filesystem.cpp  local_filesystem.h  page_cache_manager.cc  page_cache_manager.h  storage_closure.cpp  storage_closure.h  storage_impl.cpp  storage_impl.h
src/cache/utils/: bthread.cpp  (+3 more)
src/client/: CMakeLists.txt  main.cc
src/common/: io_buffer.h  memory_pool.cc  memory_pool.h  status.cc  status.h
src/mds/: CMakeLists.txt  mds.cpp
test/: CMakeLists.txt
(+81 files in other folders)
